<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#767272"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bike_name"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/bike_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <!-- What bike -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bike_type"
            android:textSize="@dimen/text_size" />
        <EditText
            android:id="@+id/bike_type"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Where does the ride start -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bike_id"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/bike_id"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bike_price"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/bike_price"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bike_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/bike_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <!-- Button to add new ride-->
    <Button
        android:id="@+id/register_button2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:layout_gravity="center"
        android:background="@color/green"
        android:text="@string/register_bike"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>
